objects/Activity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>拒绝申请原因（请选择）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>技术人员时间冲突</fullName>
                </value>
                <value>
                    <fullName>初次拜访客户，技术人员无需陪同前往</fullName>
                </value>
                <value>
                    <fullName>已支持过，已充分介绍技术</fullName>
                </value>
                <value>
                    <fullName>销售安排不合理</fullName>
                </value>
                <value>
                    <fullName>未约到关键用户</fullName>
                </value>
                <value>
                    <fullName>其他（请备注原因）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>选其他原因</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_Account__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Generated</fullName>
                </value>
                <value>
                    <fullName>Marketing Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration Trigger Do not remove</description>
        <label>MH Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>NT Training</fullName>
                </value>
                <value>
                    <fullName>Educational Event</fullName>
                </value>
                <value>
                    <fullName>In-Service</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryType__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 - Believer/Only NTD</fullName>
                </value>
                <value>
                    <fullName>1 - Believer/Only SGL</fullName>
                </value>
                <value>
                    <fullName>1 – Believer/Only Uses PKI or Verinata</fullName>
                </value>
                <value>
                    <fullName>1 - Believer/Only VC</fullName>
                </value>
                <value>
                    <fullName>2 – Promotes PKI, Verinata &amp; other Labs</fullName>
                </value>
                <value>
                    <fullName>2 - Promotes VC &amp; Others</fullName>
                </value>
                <value>
                    <fullName>2 - Uses NTD &amp; Others</fullName>
                </value>
                <value>
                    <fullName>2 - Uses SGL &amp; Others</fullName>
                </value>
                <value>
                    <fullName>3 Stages of Care Flashcard</fullName>
                </value>
                <value>
                    <fullName>3 – Uses a Competitor</fullName>
                </value>
                <value>
                    <fullName>3 - Uses Competitor</fullName>
                </value>
                <value>
                    <fullName>4 - Dabbler</fullName>
                </value>
                <value>
                    <fullName>4 – Dabbler</fullName>
                </value>
                <value>
                    <fullName>5 - Pro Public Banking</fullName>
                </value>
                <value>
                    <fullName>5 - Uneducated</fullName>
                </value>
                <value>
                    <fullName>5 – Uneducated</fullName>
                </value>
                <value>
                    <fullName>6 - Uneducated</fullName>
                </value>
                <value>
                    <fullName>Additional Post Sales Training</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Attending Application, Software or Instrument Training</fullName>
                </value>
                <value>
                    <fullName>Attending Tradeshows</fullName>
                </value>
                <value>
                    <fullName>Attending Training</fullName>
                </value>
                <value>
                    <fullName>BU Support</fullName>
                </value>
                <value>
                    <fullName>Conference Calls internal</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Detail Aid and Reprints</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Reprints</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue VisAid</fullName>
                </value>
                <value>
                    <fullName>CPD/Heparin Flashcard</fullName>
                </value>
                <value>
                    <fullName>Current Promotion</fullName>
                </value>
                <value>
                    <fullName>Customer Support - phone/internet/lab work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False = Outbound Call, True = Inbound Call</description>
        <label>Inbound Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>P/L</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>AVS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>BTX</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>CKP</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CMG</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DAB</fullName>
                </value>
                <value>
                    <fullName>DAO</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>DL</fullName>
                </value>
                <value>
                    <fullName>DLS</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
                <value>
                    <fullName>DSK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visited_With__c</fullName>
        <label>Visited With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Event__c</fullName>
        <label>Cost of Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Postsales</fullName>
                </value>
                <value>
                    <fullName>Admin &amp; General</fullName>
                </value>
                <value>
                    <fullName>#1 ViaCord Believer</fullName>
                </value>
                <value>
                    <fullName>#2 Promotes all CB Banks</fullName>
                </value>
                <value>
                    <fullName>#3 Pro Private/Uses Competitor</fullName>
                </value>
                <value>
                    <fullName>#4 Dabbler/Doesn&apos;t Educate Patient</fullName>
                </value>
                <value>
                    <fullName>#5 Pro-Public Banking</fullName>
                </value>
                <value>
                    <fullName>#6 Uneducated/Non-Believer</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>ViaCord</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Detail__c</fullName>
        <label>Primary Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ViaCord</fullName>
                </value>
                <value>
                    <fullName>NTD</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Used__c</fullName>
        <label>Collateral Used</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3 Stages of Care Visual Aid</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Detail Aid</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Results Letter</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue Visual aid</fullName>
                </value>
                <value>
                    <fullName>CPD/Heparin Flashcard</fullName>
                </value>
                <value>
                    <fullName>DBS Card</fullName>
                </value>
                <value>
                    <fullName>Demo Collection Kit</fullName>
                </value>
                <value>
                    <fullName>FAQs</fullName>
                </value>
                <value>
                    <fullName>FTS | Fβ Patient brochure</fullName>
                </value>
                <value>
                    <fullName>FTS with IRA instruction sheet for patients</fullName>
                </value>
                <value>
                    <fullName>Info Kit</fullName>
                </value>
                <value>
                    <fullName>NTD Contact Card</fullName>
                </value>
                <value>
                    <fullName>NTD  IRA home collection kit</fullName>
                </value>
                <value>
                    <fullName>NTD Visual Aid 2011</fullName>
                </value>
                <value>
                    <fullName>Online Education Card</fullName>
                </value>
                <value>
                    <fullName>Online Education Green Form</fullName>
                </value>
                <value>
                    <fullName>Options and Answers Easel back</fullName>
                </value>
                <value>
                    <fullName>PE folder</fullName>
                </value>
                <value>
                    <fullName>Physician sell sheet of test comparison grid</fullName>
                </value>
                <value>
                    <fullName>Research Flashcard</fullName>
                </value>
                <value>
                    <fullName>Sample blood card/test requisition form</fullName>
                </value>
                <value>
                    <fullName>Sample results report</fullName>
                </value>
                <value>
                    <fullName>SEQ | Fβ Patient brochure</fullName>
                </value>
                <value>
                    <fullName>Slim Jim</fullName>
                </value>
                <value>
                    <fullName>Survival Rate Flashcard</fullName>
                </value>
                <value>
                    <fullName>Transplant / Infusion Summary</fullName>
                </value>
                <value>
                    <fullName>Visual Aid 2011</fullName>
                </value>
                <value>
                    <fullName>z.default value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Message__c</fullName>
        <label>Primary Message</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2nd Trimester Screening</fullName>
                </value>
                <value>
                    <fullName>90% detection rate at 5% false positive rate</fullName>
                </value>
                <value>
                    <fullName>Access To Emerging Treatments</fullName>
                </value>
                <value>
                    <fullName>ACOG recommends screening for all pregnant women</fullName>
                </value>
                <value>
                    <fullName>Collection Instructions / In-Service</fullName>
                </value>
                <value>
                    <fullName>Complete Newborn Stem Cell Package: CB+CT</fullName>
                </value>
                <value>
                    <fullName>CPD/Heparin Free</fullName>
                </value>
                <value>
                    <fullName>DBS Card</fullName>
                </value>
                <value>
                    <fullName>Every Cell Counts</fullName>
                </value>
                <value>
                    <fullName>Exclusive Advantages</fullName>
                </value>
                <value>
                    <fullName>FDA cleared collection bag</fullName>
                </value>
                <value>
                    <fullName>Highest available detection rate in the first trimester</fullName>
                </value>
                <value>
                    <fullName>Highest published survival rate</fullName>
                </value>
                <value>
                    <fullName>Leader in transplants</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>More More Better Message</fullName>
                </value>
                <value>
                    <fullName>More Potential - More Engraftment</fullName>
                </value>
                <value>
                    <fullName>Odds of Use</fullName>
                </value>
                <value>
                    <fullName>Only lab that measures free beta hCG</fullName>
                </value>
                <value>
                    <fullName>Only lab to offer IRA</fullName>
                </value>
                <value>
                    <fullName>Only lab to offer Nasal Bone</fullName>
                </value>
                <value>
                    <fullName>Processing method - Sepax</fullName>
                </value>
                <value>
                    <fullName>Promo/Coupon</fullName>
                </value>
                <value>
                    <fullName>Related Vs. Unrelated Outcomes</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sequential Screening</fullName>
                </value>
                <value>
                    <fullName>Sibling Connection</fullName>
                </value>
                <value>
                    <fullName>Treatment Ready Option</fullName>
                </value>
                <value>
                    <fullName>Validated by 23 published studies</fullName>
                </value>
                <value>
                    <fullName>Why Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Company__c</fullName>
        <description>Work Order account</description>
        <inlineHelpText>Work Order account</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Viacord__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Detail</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Learn</fullName>
                </value>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Speaker Program</fullName>
                </value>
                <value>
                    <fullName>Account Activity</fullName>
                </value>
                <value>
                    <fullName>Promo/Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Detail__c</fullName>
        <label>Secondary Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ViaCord</fullName>
                </value>
                <value>
                    <fullName>NTD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cord Tissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Category__c</fullName>
        <label>Subject Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin &amp; General</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Grand Rounds</fullName>
                </value>
                <value>
                    <fullName>Instrument Demo Request</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Please enter a subject</fullName>
                </value>
                <value>
                    <fullName>Postsales</fullName>
                </value>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Reagent Evaluation Request</fullName>
                </value>
                <value>
                    <fullName>Run Samples</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Scientific Presentation</fullName>
                </value>
                <value>
                    <fullName>Send Specimen Kit</fullName>
                </value>
                <value>
                    <fullName>Service Call</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Webcast</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Snack</fullName>
                </value>
                <value>
                    <fullName>Local Conference or Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Guest Speaker Event</fullName>
                </value>
                <value>
                    <fullName>Educational or Scientific Presentation</fullName>
                </value>
                <value>
                    <fullName>PTO Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Sheet_Section__c</fullName>
        <description>SAM Sheet Section Information Gold Sheet and Blue Sheet Best Actions</description>
        <label>Sheet Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Rating__c</fullName>
        <inlineHelpText>Please rate using 5 as the highest rating, 1 as the lowest</inlineHelpText>
        <label>Collateral Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Message__c</fullName>
        <label>Secondary Message</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2nd Trimester Screening</fullName>
                </value>
                <value>
                    <fullName>3 Stages of Care</fullName>
                </value>
                <value>
                    <fullName>90% detection rate at 5% false positive rate</fullName>
                </value>
                <value>
                    <fullName>Access to Emerging Treatments</fullName>
                </value>
                <value>
                    <fullName>ACOG recommends screening for all pregnant women</fullName>
                </value>
                <value>
                    <fullName>Collection Instructions / In-Service</fullName>
                </value>
                <value>
                    <fullName>Complete Newborn Stem Cell Package: CB+CT</fullName>
                </value>
                <value>
                    <fullName>CPD/Heparin Free</fullName>
                </value>
                <value>
                    <fullName>DBS Card</fullName>
                </value>
                <value>
                    <fullName>Every Cell Counts</fullName>
                </value>
                <value>
                    <fullName>Exclusive Advantages</fullName>
                </value>
                <value>
                    <fullName>FDA cleared collection bag</fullName>
                </value>
                <value>
                    <fullName>Highest available detection rate in the first trimester</fullName>
                </value>
                <value>
                    <fullName>Highest published survival rate</fullName>
                </value>
                <value>
                    <fullName>Leader in transplants</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>More More Better Message</fullName>
                </value>
                <value>
                    <fullName>More Potential - More Engraftment</fullName>
                </value>
                <value>
                    <fullName>Odds of Use</fullName>
                </value>
                <value>
                    <fullName>Only lab that measures free beta hCG</fullName>
                </value>
                <value>
                    <fullName>Only lab to offer IRA</fullName>
                </value>
                <value>
                    <fullName>Only lab to offer Nasal Bone</fullName>
                </value>
                <value>
                    <fullName>Processing method - Sepax</fullName>
                </value>
                <value>
                    <fullName>Promo/Coupon</fullName>
                </value>
                <value>
                    <fullName>Related vs. Unrelated Outcomes</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sequential Screening</fullName>
                </value>
                <value>
                    <fullName>Sibling Connection</fullName>
                </value>
                <value>
                    <fullName>Treatment Ready Option</fullName>
                </value>
                <value>
                    <fullName>Validated by 23 published studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_End_Time__c</fullName>
        <label>Pre Sales End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Instrument__c</fullName>
        <description>Denotes instrument for work order</description>
        <inlineHelpText>Denotes instrument for work order</inlineHelpText>
        <label>Instrument</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>